[project]
name = "deep-jsense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.9.0"
dependencies = [
    "dotmap==1.3.30",
    "h5py==3.14.0",
    "matplotlib==3.6.3",
    "numpy==1.19.5",
    "sigpy==0.1.27",
    "torch==1.9.0+cu111",
    "tqdm==4.67.3",
]

[tool.uv]
find-links = ["https://download.pytorch.org/whl/cu111/torch_stable.html"]