[project]
name = "deep-jsense"
version = "0.1.0"
description = "Deep J-Sense: Accelerated MRI Reconstruction via Unrolled Alternating Optimization"
readme = "README.md"
requires-python = "~=3.10.0"
dependencies = [
    "dotmap==1.3.30",
    "h5py==3.14.0",
    "matplotlib==3.10.8",
    "sigpy==0.1.27",
    "torch==2.9.1",
    "tqdm==4.67.3",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
